crates/tracel-mlir-rs/src/dialect/snapshots/tracel_mlir_rs__dialect__ods__tests__alloc.snap
---
source: crates/tracel-mlir-rs/src/dialect/ods.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: i64) {
    %0 = llvm.alloca %arg0 x i64 : (i64) -> !llvm.ptr
    llvm.return
  }
}
